policies-templates/allow-all-from-to-tenant-ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-from-to-tenant-ns
  namespace: <tenant-ns>
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kourier.knative.dev/listener: <tenant-listener>
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kourier.knative.dev/listener: <tenant-listener>
  policyTypes:
    - Egress
    - Ingress
