policies-templates/deny-all.yaml
# DENY ALL network policy template

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all
  namespace: <tenant-ns>
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
